--- a/templates/cont.twig
+++ b/templates/cont.twig
@@ -54,11 +54,11 @@
                                 <label for="sup_email">Adresa de Email</label>
                             </div>
                             <div class="input-field">
-                                <input id="sup_pass" type="password" name="pass" required>
+                                <input id="sup_pass" type="password" name="password" required>
                                 <label for="sup_pass">Parola</label>
                             </div>
                             <div class="input-field">
-                                <input id="sup_cpass" type="password" name="cpass" required>
+                                <input id="sup_cpass" type="password" name="cpassword" required>
                                 <label for="sup_cpass">Confirmarea Parolei</label>
                             </div>
                             <div class="input-field">
