--- a/templates/catedra.twig
+++ b/templates/catedra.twig
@@ -12,28 +12,31 @@
             <span class="bcnav">
                 <a href="{{l('/')}}">CNNG</a>
                 <i class="material-icons">&#xE315;</i>
-                <a href="{{l('/evenimente')}}">Catedre</a>
+                <a href="{{l('/catedre')}}">Catedre</a>
                 <i class="material-icons">&#xE315;</i>
-                <a href="#">{{title}}</a>
+                <a href="#">{{cpdata.name}}</a>
             </span>
         </div>
     </div>
     <div class="thepage">
         <div class="cin">
-            <div class="thecontent">
+            <div class="thecontent cardart">
+                <a href="{{l('/catedre')}}" class="btn2 smallbtn"><i class="material-icons">&#xE314;</i> Înapoi la catedre</a>
+                {% for item in catddata %}
                 <div class="card">
                     <div class="card-content">
-                        
-                        <h2 class="tinyh2">Lorem ipsum doloe</h2>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut...</p>
+                        <h2 class="tinyh2">{{item.title}}</h2>
+                        <p>{{item.content|striptags|truncate(250)}}</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="#">Prof. Dana Anton</a>
+                        <a href="#" class="btn2 smallbtn right">Citește articolul</a>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-content">
-                        <h2 class="tinyh2">Lorem ipsum doloe</h2>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                    </div>
-                </div>
+                {% endfor %}
+                {% if catddata|length == 0 %}
+                    <h3 class="semititle">Nu există nicio postare la această catedră...</h3>
+                {% endif %}
             </div>
             {% include 'part/sidebar.twig' %}
         </div>
