--- a/templates/part/head.twig
+++ b/templates/part/head.twig
@@ -3,9 +3,8 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 <link href="{{asset("components/data.css")}}" rel="stylesheet">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Raleway:300,400&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Raleway:300,400&subset=latin-ext" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 {% if fulltitle is defined %}
     {% set ctitle = fulltitle %}
