--- a/templates/cont.twig
+++ b/templates/cont.twig
@@ -46,19 +46,19 @@
 
                         <form action="" method="POST" id="form_signup">
                             <div class="input-field">
-                                <input id="sup_name" type="text" name="name" required>
+                                <input id="sup_name" type="text" name="name" autocomplete="off" required>
                                 <label for="sup_name">Nume</label>
                             </div>
                             <div class="input-field">
-                                <input id="sup_email" type="email" name="email" required>
+                                <input id="sup_email" type="email" name="email" autocomplete="off" required>
                                 <label for="sup_email">Adresa de Email</label>
                             </div>
                             <div class="input-field">
-                                <input id="sup_pass" type="password" name="password" required>
+                                <input id="sup_pass" type="password" name="password" autocomplete="off" required>
                                 <label for="sup_pass">Parola</label>
                             </div>
                             <div class="input-field">
-                                <input id="sup_cpass" type="password" name="cpassword" required>
+                                <input id="sup_cpass" type="password" name="cpassword" autocomplete="off" required>
                                 <label for="sup_cpass">Confirmarea Parolei</label>
                             </div>
                             <div class="input-field">
