--- a/src/css/profs.css
+++ b/src/css/profs.css
@@ -77,3 +77,20 @@
     margin: 0 30px;
     background-position-y: top;
 }
+
+.prof_ico{
+    background-image: url('../img/unknown.png');
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center center;
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    border-radius: 50%;
+    vertical-align: middle;
+    margin-right: 4px;
+}
+ .prof_ico.siz32{
+     width: 32px;
+     height: 32px;
+ }
