--- a/src/css/fixer.css
+++ b/src/css/fixer.css
@@ -152,3 +152,6 @@ input:not([type]):focus:not([readonly]) + label, input[type=text]:focus:not([rea
 .tac{
     text-align: center;
 }
+.trumbowyg-box, .trumbowyg-editor{
+    margin-top: 5px;
+}
