--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -43,7 +43,16 @@
 }
 .sec .subtitle{
     margin-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+}
+.sec .sectshortdesc{
+    margin-top: 0;
+    margin-bottom: 30px;
+    padding: 0 30px;
+    font-family: Raleway;
+    text-align: left;
+    text-indent: 35px;
+    font-size: 16px;
 }
 .sec2 p{
     text-align: justify;
