--- a/src/css/main.css
+++ b/src/css/main.css
@@ -542,7 +542,7 @@ html,body{
     float: left;
     padding: 20px 25px;
     padding-bottom: 30px;
-    font-size: 19px;
+    font-size: 17px;
     font-family: Roboto, Calibri, sans-serif;
 }
 .thepage .thecontent.full{
@@ -562,6 +562,9 @@ html,body{
 }
 .thepage .thecontent p.nn{
     margin: 0;
+}
+.card .card-content p{
+    margin-bottom: 4px;
 }
 .thepage .thecontent h2{
     margin: 6px 4px;
@@ -585,6 +588,9 @@ html,body{
     margin-top: 5px;
     height: 3px;
     background: #2071EE;
+}
+.card h2.tinyh2{
+    margin-bottom: 15px;
 }
 .thepage .thecontent h3{
     margin: 10px 4px;
