--- a/app/Templates/part/scripts.twig
+++ b/app/Templates/part/scripts.twig
@@ -2,6 +2,8 @@
     var csrftoken = '{{csrftoken('main')}}';
     var currenturl = '{{app.request.attributes.get('_route')|trim('_')}}';
     var requesturi = '{{app.request.requestUri}}';
-
+    {% if data.id is defined %}
+    var customid = {{data.id}};
+    {% endif %}
 </script>
 <script src="{{asset('components/data.js')}}"></script>
